force-app/main/default/objects/Response_Type__c/Response_Type__c.object-meta.xml
<CustomObject>
    <description>Custom Object to store Response Type information.</description>
    <label>Response Type</label>
    <nameField>
        <label>Response Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Response Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>