force-app/main/default/objects/Response_Type__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaign Code to identify the record with the related Campaign parent record.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Response Types</relationshipLabel>
    <relationshipName>Response_Types</relationshipName>
    <type>Lookup</type>
</CustomField>