force-app/main/default/objects/Response_Type__c/fields/Close_To_Do_Activities__c.field-meta.xml
<CustomField>
    <fullName>Close_To_Do_Activities__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This flag decides whether activities to be closed based on response status and outcome reason value in the response record</description>
    <label>Close To-Do Activities Flag</label>
    <type>Checkbox</type>
</CustomField>