force-app/main/default/objects/Response_Type__c/fields/Create_Activities_From_Template__c.field-meta.xml
<CustomField>
    <fullName>Create_Activities_From_Template__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This flag decides whether activities to be created from the template based on response status and outcome reason value in the response record</description>
    <label>Create Activities From Template</label>
    <type>Checkbox</type>
</CustomField>