force-app/main/default/objects/Response_Type__c/fields/Create_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_Opportunity__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This flag will determine whether user can click Create Opportunity button along with Division Group</description>
    <label>Create Opportunity</label>
    <type>Checkbox</type>
</CustomField>