force-app/main/default/objects/Response_Type__c/fields/Create_To_Do_Activities__c.field-meta.xml
<CustomField>
    <fullName>Create_To_Do_Activities__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This flag will determine whether activities to be created based on response status and outcome reason value in the response record.</description>
    <label>Create To-Do Activities</label>
    <type>Checkbox</type>
</CustomField>