force-app/main/default/objects/Response_Type__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <complianceGroup>Source - Salesforce;Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <description>Field purpose is to uniquely identify the record to update when UNICA amends the response data of a campaign. Campaign Code + Response type + Business outcome reason identifies the record uniquely.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>