force-app/main/default/objects/Response_Type__c/fields/Follow_Up_State__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_State__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Based on the outcome reason value set in the response record, the Follow-Up Date will be set Read Only /Optional /Mandatory</description>
    <label>Follow-Up State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
                <label>Readonly</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Mandatory</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Optional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>