force-app/main/default/objects/Response_Type__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This flag decides whether this record is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>