force-app/main/default/objects/Response_Type__c/fields/Outcome_Reason__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Reason__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Outcome Reason for the response status of the corresponding campaign</description>
    <label>Outcome Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>