force-app/main/default/objects/Response_Type__c/fields/Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Response_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Response status for the corresponding campaign</description>
    <label>Response Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>