force-app/main/default/objects/Response_Type__c/fields/UNICA_Lead_SubStatus__c.field-meta.xml
<CustomField>
    <fullName>UNICA_Lead_SubStatus__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Lead sub status value to be updated in the lead record based on the Lead status updated in the lead record</description>
    <label>UNICA Lead SubStatus</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RPC</fullName>
            </value>
            <value>
                <fullName>ATMP</fullName>
            </value>
            <value>
                <fullName>CANC</fullName>
            </value>
            <value>
                <fullName>CBK</fullName>
            </value>
            <value>
                <fullName>NRPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>